# pyproject-toml-repo

./: pyproject.toml
.github/: dependabot.yml
